sortbyServerAction.Action.text=Sort by &Server
sortbyServerAction.Action.shortDescription=Sort selected downloads by server name
sortbyServerAction.Action.accelerator=
sortbyServerAction.Action.smallIcon=${iconsPath}sort_small.gif


New:
checkPluginStatuses.Action.text=&Plugin status
checkPluginStatuses.Action.shortDescription=Check the status of plugins in web browser

globalSpeedLimitAction.Action.text=&Global speed limit
globalSpeedLimitAction.Action.shortDescription=${labelSpeedBtn.toolTipText}
globalSpeedLimitAction.Action.smallIcon=${labelSpeedBtn.icon}

removeCompletedAndDeletedAction.Action.text=Remove Completed Links and De&leted Files
removeCompletedAndDeletedAction.Action.accelerator =shortcut L
removeCompletedAndDeletedAction.Action.shortDescription = Remove all completed downloads whose files do not exist
removeCompletedAndDeletedAction.Action.smallIcon=${iconsPath}clean.png

speedLimitIsEnabled=Speed limit is enabled and set to value %s/s

SKIPPED=SKIPPED
HOLD_ON=HOLD ON

refreshProxyList.Action.text=&Refresh proxy list
refreshProxyList.Action.shortDescription=Refresh the list of proxies
refreshProxyList.Action.smallIcon=${iconsPath}refresh_proxy_list.png
refreshProxyList.Action.accelerator=

andOtherFiles=...and %d other files
andOtherURLs=...and %d other URLs


UserPreferencesDialog.properties
====================================
New:
panelGlobalSpeedLimiter.border=Global speed limiter
panelFileSpeedLimiter.border=File speed limiter
labelSpeedSliderMinValue.text=Minimum value
labelSpeedSliderMaxValue.text=Maximum value
labelSpeedSliderStep.text=Step
labelSpeedSliderKbps.text=kB/s
labelFileSpeedLimiterValues.text=Values for file speed limiter (kB/s)
fieldFileSpeedLimiterValues.toolTipText=Separate values with commas. Two commas indicate a menu separator. 0 means unlimited.
labelFileSpeedLimiterValuesDesc.text=<html><small>Separate values with commas.<br/>Two commas indicate a menu separator. 0 means unlimited.</small></html>
