@@ -13,7 +13,9 @@ import cz.vity.freerapid.gui.managers.exceptions.NotSupportedDownloadServiceExce
 import cz.vity.freerapid.model.DownloadFile;
 import cz.vity.freerapid.plugins.webclient.ConnectionSettings;
 import cz.vity.freerapid.plugins.webclient.DownloadState;
+import static cz.vity.freerapid.plugins.webclient.DownloadState.*;
 import cz.vity.freerapid.plugins.webclient.FileState;
+import static cz.vity.freerapid.plugins.webclient.FileState.NOT_CHECKED;
 import cz.vity.freerapid.plugins.webclient.interfaces.HttpFile;
 import cz.vity.freerapid.plugins.webclient.interfaces.MaintainQueueSupport;
 import cz.vity.freerapid.swing.Swinger;
@@ -38,9 +40,6 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.*;
 import java.util.logging.Logger;
-
-import static cz.vity.freerapid.plugins.webclient.DownloadState.*;
-import static cz.vity.freerapid.plugins.webclient.FileState.NOT_CHECKED;
 
 /**
  * @author Vity
@@ -750,7 +749,7 @@ public class DataManager extends AbstractBean implements PropertyChangeListener,
             } catch (NotSupportedDownloadServiceException e) {
                 continue;
             }
-            list.add(new URLByPriority(url, pluginsManager.getPluginMetadata(id).getPriority()));
+            list.add(new URLByPriority(url, pluginsManager.getPluginMetadata(id).getPluginPriority()));
         }
         if (list.isEmpty()) {
             return false;
@@ -798,7 +797,7 @@ public class DataManager extends AbstractBean implements PropertyChangeListener,
         }
 
         public int compareTo(URLByPriority o) {
-            return new Integer(this.priority).compareTo(o.priority);
+            return -new Integer(this.priority).compareTo(o.priority);
         }
 
         public URL getUrl() {
